--- a/src/scss/base/general.scss
+++ b/src/scss/base/general.scss
@@ -27,6 +27,7 @@ main {
     padding-top: 100px;
 
     @media (max-width: 991px) {
+        padding-top: 46px;
         overflow: hidden;
     }
 }
