--- a/src/scss/base/mixin.scss
+++ b/src/scss/base/mixin.scss
@@ -1,5 +1,6 @@
 $colorPrimary: #1D9F93;
 $colorSecondary: #FBBC3C;
+$colorSilver: #9CADB4;
 $colorText: rgba(3, 47, 69, 1);
 
 @mixin font($font_name, $file_name, $weight, $style) {
