--- a/src/scss/html/pages/home.scss
+++ b/src/scss/html/pages/home.scss
@@ -671,6 +671,14 @@
         padding: 30px 0;
     }
 
+    &-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
     &__title {
         margin-bottom: 60px;
 
@@ -680,7 +688,6 @@
     }
 
     &__link {
-        margin: 0 auto;
 
         @media (max-width: 991px) {
             width: 100%;
