--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import '../../node_modules/normalize.css/normalize';
 @import './base/mixin';
 @import './fonts';
+// @import './base/video';
 @import './base/general';
 @import './base/accordion';
 
